# wizard.domains

./: Dockerfile  README.md  pyproject.toml
program/: main.py
program/libs/: api.py  app.py  fast_gunicorn.py
program/libs/static/html/: index.html
program/libs/static/json/: particlesjs-config.json
program/libs/templates/: domain_availability.html  domain_result.html
